# visibility-heuristic-path-planner

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  interface.m  read_serialized_heuristic.m  visibility_heuristic_planner.bat
MATLAB_code/: a_quiver_plots.m  b_visibility_shapes.m  c_sample_planner_solving_random_environments.m  d_sample_planner_solving_maze.m  e_used_for_video_submission.m  f_comparison_to_a_star.m  rnd_1.mat  rnd_2.mat  test_environment_generator.m
MATLAB_code/Astar/: ExampleOnTheUseOfAStarAlgorithm.m
MATLAB_code/Astar/Version2/: ASTARPATH2SIDED.m  ExampleOfUse2SidedSolver.m
MATLAB_code/expfig/: .gitignore
MATLAB_code/visibility/: getAccessibilityMap.m  getAccessibilityMapPlanner.m
Samples/: benchmark_results.txt  ratios.txt
config/: settings.config
include/environment/: Field.h  environment.h  field.h
include/parser/: ConfigParser.h  parser.h
include/solver/: visibilityBasedSolver.h
src/: ConfigParser.cpp  environment.cpp  main.bat  main.cpp  parser.cpp  read_serialized_heuristic.m  settings.config  visibilityBasedSolver.cpp
